# proxima-spaceport

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: Dockerfile  mypy.ini  pyproject.toml
backend/.github/workflows/: ci.yaml
backend/app/: database.db  database.py  dependencies.py  main.py
backend/app/api/routes/: api.py  indexer.py
backend/app/core/: config.py  errors.py  paginator.py
backend/app/models/: indexer.py
backend/app/services/: indexer.py
backend/app/utilities/: github_utils.py
backend/tests/: conftest.py  db_helpers.py  test_indexer_api.py
frontend/: Dockerfile
frontend/src/: App.jsx  api.js  index.css
frontend/src/actions/: indexer.js
frontend/src/components/: Button.jsx  Button.module.css  ContentPanel.jsx  ContentPanel.module.css  ReposContentSection.jsx  ReposContentSection.module.css  header.jsx  header.module.css  menu.jsx  menu.module.css
frontend/src/config/: menu.js  routes.js
frontend/src/helpers/: validators.js
frontend/src/pages/: home.jsx  home.module.css
scripts/: test-ci.ps1
