[project]
requires-python = ">=3.9"
name = "proxima-spaceport"
version = "0.1.0"
description = "The service that handles all the installations"
authors = [
    { name = "Antonio Frontino", email = "antonio.frontino@gmail.com" },
]
dependencies = [
    "fastapi[Standard]>=0.111.0",
    "uvicorn==0.23.2",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "databases[sqlite]>=0.7.0",
    "pygithub>=2.8.1",
    "cryptography>=45.0.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "httpx>=0.24",
    "black>=24.3",
    "autopep8>=2.0.0",
    "ipdb>=0.13.0",
    "pylint>=3.0.0",
    "mypy>=1.9"
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]